--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ main {
 .texto-header h1 {
     font-size: 30px;
     animation: scale-text 2s ease;
-    animation-timeline: scroll();
 }
 
 
@@ -61,11 +60,13 @@ main {
     border-radius: 60%;
     background-image: url("avatartion2.png");
     background-size: cover;
+    transition: 1s ease-in-out;
+    opacity: 1;
 }
 
 
 .baixar-cv {
-    width: 50%;
+    width: 55vw;
     display: flex;
     flex-direction: row;
     justify-content: end; /* Alinhas tudo no fim da div ->> */
@@ -89,9 +90,16 @@ a:visited {
     color: #e1e1e1;
 }
 .baixar-cv svg:hover {
-    fill: aquamarine;
+    fill: #fde047;
     transition: 200ms;
 
+}
+
+
+.esconder {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
 }
 
 @keyframes hello-animacao {
@@ -105,24 +113,74 @@ a:visited {
     
     30% {
 
-        
+
         box-shadow: 1px 1px 14px #00000017;
       /*translate: -100vw 0;*/
     }
 
-    50% {
+    40% {
         height: 100px;
         box-shadow: 1px 1px 14px #0000003b;
     }
 }
 
-/* @keyframes scale-text {
-    to {
-        font-size: 30px;
+
+@keyframes none-adapta {
+    from {
+        opacity: 1;
+        display: none;
+        visibility: hidden;
     }
 
-    from { 
-        font-size: 1px;
-    }
-} */
 
+    10% {
+        opacity: 0; 
+        display: none;
+        visibility: hidden;
+    }
+
+    100% {
+        opacity: 0; 
+        display: none;
+        visibility: hidden;
+    }
+}
+
+/* Responsividade */
+
+@media (max-width: 600px) {
+    .top-anima {
+        display: flex;
+        flex-direction: column;
+        animation: hello-animacao 1ms ease-in-out;
+        animation-timeline: scroll();
+    }
+
+    .img, .texto-header{
+        animation: none-adapta 1ms ease;
+        animation-timeline: scroll();
+        max-width: 75vw;
+    }
+
+    .baixar-cv  {
+        position: absolute;
+        width: auto;
+        bottom: 15%;
+    }
+
+    @keyframes hello-animacao {
+        0% {
+            height: 100%;
+        }
+
+        25% {
+            height: 50px;
+            box-shadow: 1px 1px 14px #0000003b;
+        }
+
+        100% {
+            height: 50px;
+            box-shadow: 1px 1px 14px #0000003b;
+        }
+    }
+}
