--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ a:visited {
         flex-direction: column;
         animation: hello-animacao 1ms ease-in-out;
         animation-timeline: scroll();
+        padding: 20px 0;
     }
 
     .img, .texto-header{
