--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body {
 }
 
 main {
-    margin-top: 40vw;
+    margin-top: 70vw;
     font-size: 1rem;
     margin-inline: auto;
     width: min(60ch, 100%);
+    margin-bottom: 10%;
 }
 
 .texto-header{
@@ -87,7 +88,7 @@ main {
 }
 
 a:visited {
-    color: #e1e1e1;
+    color: #1b1b1b;
 }
 .baixar-cv svg:hover {
     fill: #fde047;
@@ -146,9 +147,81 @@ a:visited {
     }
 }
 
+/* Cards  */
+
+.row {
+    display: flex;
+    justify-content: center;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.cols {
+    display: flex;
+    align-items: stretch;
+    margin-bottom: 3rem;
+    margin-left: 1rem;
+}
+
+.iconbox {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+    border: 1px solid #fff;
+    border-radius: 20px;
+}
+
+.iconbox:hover {
+    padding: 35px;
+}
+
+
+.icon {
+    align-content: center;
+    margin: 0 auto 20px auto;
+    /* padding-top: 17px; */
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    width: 72px;
+    height: 72px;
+    background: #fff4df;
+}
+
+.title {
+    font-weight: 700;
+    margin-bottom: 15px;
+    font-size: 18px;
+}
+
+.description {
+    font-size: 15px;
+    line-height: 28px;
+    margin-bottom: 0;
+}
+
 /* Responsividade */
 
-@media (max-width: 600px) {
+@media (max-width: 1200px) {
+
+    main {
+        margin-top: 90vw;
+    }
+}
+
+@media (max-width: 800px) {
+
+    main {
+        margin-top: 140vw;
+    }
     .top-anima {
         display: flex;
         flex-direction: column;
@@ -183,5 +256,12 @@ a:visited {
             height: 50px;
             box-shadow: 1px 1px 14px #0000003b;
         }
+    }
+}
+
+@media (max-width: 500px) {
+
+    main {
+        margin-top: 240vw;
     }
 }
