--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ a:visited {
 
 .iconbox {
     display: flex;
+    align-items: center;
     flex-direction: column;
     padding: 30px;
     position: relative;
