--- a/style.css
+++ b/style.css
@@ -181,7 +181,8 @@ a:visited {
 }
 
 .iconbox:hover {
-    padding: 35px;
+     /* padding: 32px; */
+    box-shadow: 1px 1px 20px 1px #cacaca;
 }
 
 
