--- a/style.css
+++ b/style.css
@@ -27,15 +27,16 @@ main {
 	top: 0;
 	left: 0;
 	width: 100%;
-
+	height: 100%;
     background: rgb(110,54,244);
     background: linear-gradient(90deg, rgba(110,54,244,1) 68%, rgba(66,54,244,1) 100%);
 
 	/* background: #6e36f4; */
     color: rgb(252, 252, 252);
 	z-index: 5000;
-	height: 100px;
+
 	overflow: hidden;
+    /*transition: height 0.2s, box-shadow 0.3s;  Transições suaves */
     animation: hello-animacao 1ms ease-in-out;
     animation-timeline: scroll();
     
@@ -57,6 +58,7 @@ main {
 
 
 .img {
+    aspect-ratio: 1;
     width: 100px;
     height: 100px;
     border-radius: 60%;
@@ -105,6 +107,7 @@ a:visited {
     opacity: 0;
 }
 
+
 @keyframes hello-animacao {
     0% {
         height: 100%;
@@ -148,6 +151,7 @@ a:visited {
         visibility: hidden;
     }
 }
+
 
 /* Safari */
 
@@ -277,6 +281,7 @@ a:visited {
         animation: none-adapta 1ms ease;
         animation-timeline: scroll();
         max-width: 75vw;
+        
     }
 
     .baixar-cv  {
