--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
 
 main {
     text-align: justify;
-    margin-top: 45vw;
+    margin-top: 52vw;
     font-size: 1rem;
     margin-inline: auto;
-    width: min(70ch, 100%);
+    width: min(75ch, 100%);
     margin-bottom: 10%;
 }
 
@@ -28,7 +28,7 @@ main {
 	left: 0;
 	width: 100%;
 	height: 100%;
-    background: rgb(110,54,244);
+    background: #6e36f4;
     background: linear-gradient(90deg, rgba(110,54,244,1) 68%, rgba(66,54,244,1) 100%);
 
 	/* background: #6e36f4; */
@@ -220,14 +220,14 @@ a:visited {
     background: #fff;
     box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
     transition: all 0.5s ease-in-out;
-    text-align: center;
+    
     border: 1px solid #fff;
     border-radius: 20px;
 }
 
 .iconbox:hover {
      /* padding: 32px; */
-    box-shadow: 1px 1px 20px 1px #cacaca;
+    box-shadow: 1px 1px 20px 1px #6f36f449;
 }
 
 
@@ -251,7 +251,7 @@ a:visited {
 
 .description {
     font-size: 15px;
-    line-height: 28px;
+    line-height: 21px;
     margin-bottom: 0;
 }
 
