:pencil: Ajuste botão para whatsapp

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ main {
 }
 
 a:visited {
-    color: #1b1b1b;
+    text-decoration: none;
 }
 .baixar-cv svg:hover {
     fill: #fde047;
@@ -311,4 +311,37 @@ a:visited {
     main {
         margin-top: 245%;
     }
+}
+
+/* Botão css */
+
+/* Botão estilo "Success" */
+.btn-success {
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    color: #363636;
+    background-color: #28a745; /* Cor verde */
+    border: 1px solid #28a745;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+/* Hover e foco */
+.btn-success:hover,
+.btn-success:focus {
+    background-color: #218838; /* Verde mais escuro */
+    border-color: #1e7e34;
+    color: white;
+    transform: translateY(-2px); /* Efeito de elevação */
+}
+
+/* Clique */
+.btn-success:active {
+    background-color: #1e7e34;
+    border-color: #1c7430;
+    transform: translateY(0); /* Remove elevação */
 }
