--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ a:visited {
     font-size: 16px;
     font-weight: 600;
     color: #363636;
-    background-color: #28a745; /* Cor verde */
+    background-color: #f5f5f5; /* Cor verde */
     border: 1px solid #28a745;
     padding: 10px 20px;
     text-align: center;
@@ -337,7 +337,8 @@ a:visited {
     background-color: #218838; /* Verde mais escuro */
     border-color: #1e7e34;
     color: white;
-    transition: color 0.4s ease, transform 0.2s ease;
+    box-shadow: 1px 1px 14px #5c5c5c3b;
+    transition: 0.4s ease, transform 0.2s ease;
     transform: translateY(-2px); /* Efeito de elevação */
 }
 
