--- a/style.css
+++ b/style.css
@@ -91,12 +91,46 @@ main {
     
 }
 
+a:link {
+    text-decoration: none;
+
+}
+
+
+
 a:visited {
     text-decoration: none;
+}
+
+a:visited:hover {
+    color: #c7c7c7;
+}
+
+a:link:hover {
+    color: #c7c7c7;
 }
 .baixar-cv svg:hover {
     fill: #fde047;
     transition: 200ms;
+
+}
+
+/* tags */
+
+.tag {
+    display: inline-block;
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    padding: 0.15em 0.45em;
+    border-radius:0.375rem;
+    background-color:#6936f4;
+    color: #fff;
+    line-height: 1.2;
+    font-size: 0.75em;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    font-weight: 700;
+    
 
 }
 
