--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ main {
 
 	/* background: #6e36f4; */
     color: rgb(252, 252, 252);
-	z-index: 5000;
+	z-index: 1;
 
 	overflow: hidden;
     /*transition: height 0.2s, box-shadow 0.3s;  Transições suaves */
@@ -133,6 +133,57 @@ a:link:hover {
     
 
 }
+
+/*MODAL*/
+
+.thumbnail {
+    width: 200px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  /* Estilos do modal */
+  .modal {
+    display: none; /* Escondido por padrão */
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+  }
+
+  /* Estilo da imagem dentro do modal */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+
+  /* Estilo para o botão de fechar */
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  /*MODAL FIM*/
 
 
 .esconder {
