--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ a:link:hover {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.9);
   }
 
@@ -163,6 +162,8 @@ a:link:hover {
     display: block;
     width: 80%;
     max-width: 700px;
+    transition: transform 0.4s ease; /* Suaviza o zoom */
+
   }
 
   /* Estilo para o botão de fechar */
